--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "index.js",
     "repository": "https://github.com/belay-nick/AcmeApp.git",
     "dependencies":{
+        "twilio": "",
         "mongoose": "",
         "express": "",
         "connect-redis": "",
